--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,6 @@ kramdown:
   hard_wrap         : false
   footnote_nr       : 1
   show_warnings     : false
-theme: jekyll-theme-minimal
+theme: jekyll-theme-modernist
 title: Saahil's homepage
 description: Home for all my projects, classwork or otherwise.
