--- a/_config.yml
+++ b/_config.yml
@@ -70,5 +70,5 @@ kramdown:
   footnote_nr       : 1
   show_warnings     : false
 theme: jekyll-theme-modernist
-title: Saahil's homepage
+title: Saahil Iyer
 description: Home for all my projects, classwork or otherwise.
